body overflow fixed

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	font-family: Handlee;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 header{
@@ -179,7 +179,6 @@ ul li{
 
 
 section#home{
-	position: absolute;
 	height: 100vh;
 	width: 100%;
 	color: white;
@@ -293,8 +292,6 @@ img.photoMe{
 
 footer{
 	position: relative;
-	left: 0;
-	bottom: 0;
 	color: black;
 	background: darkgrey; 
 	width: 100%;
